fix css collapse

--- a/src/styles/collapse-menu.css
+++ b/src/styles/collapse-menu.css
@@ -7,7 +7,8 @@
 
 .toggle-button-header_title {
     text-transform: capitalize;
-    font-weight: normal;
+    font-weight: 700;
+    color: #e96d00;
 }
 
 .toggle-button-header {
@@ -16,26 +17,31 @@
 
 .toggle-button:hover,
 .toggle-button_activer:hover {
-    background: #d0d0d0d9;
+    background: #d8d8d8d9;
 }
 
 .toggle-button,
 .toggle-button_active {
     width: 70%;
     background-color: transparent;
-    border: 1px solid #6e6c6b8f;
-    border-bottom: 3px solid #6e6c6b8f;
-    color: #000;
+    /* border: 1px solid #6e6c6b8f; */
+    border-bottom: 1px solid #e96d00;
+    /* color: #000; */
     padding: 10px;
     margin: 0 0 5px 0;
     display: flex;
     flex-direction: row;
-    border-radius: 15px;
+    /* border-radius: 15px; */
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
 
 .toggle-button_active {
-    background: #d0d0d0d9 !important;
+    background: #efceb77d;
     border: none;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
 }
@@ -44,6 +50,7 @@
 .toggle-button_active .toggle-button-icon {
     margin: 5px;
     font-size: 20px;
+    visibility: hidden;
 }
 
 .toggle-button-icon_active {
